--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course</h1>
+<h1 style="color: green; font-size: 50px; text-align: center;">Hey there!!</h1>
 </body>
 </html>
